# geometry-tools

./: .gitignore  CMakeLists.txt  README.md
scripts/: build.sh  run.sh  run_tests.sh
src/: CMakeLists.txt  cli.h  main.cpp
src/Constructions/: CMakeLists.txt  Intersection.cpp  Intersections.h  Line.cpp  Line.h  LineSegment.cpp  LineSegment.h  Plane.cpp  Plane.h  Point.cpp  Point.h  Vector.cpp  Vector.h
src/HalfEdgeMesh/: CMakeLists.txt  HalfEdgeMesh.cpp  HalfEdgeMesh.h
src/Meshes/: CMakeLists.txt  HalfEdgeMesh.cpp  HalfEdgeMesh.h  Meshes.md  WingedEdgeMesh.h  cli.h
src/Utils/: CMakeLists.txt  StringUtils.cpp  StringUtils.h  cli.h
tests/: CMakeLists.txt  HalfEdgeMeshTests.cpp  PlaneTests.cpp  PointTests.cpp  UtilsTests.cpp  VectorTests.cpp
